--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <div class="login-div">
         <form>
             <p class="login-p">Login</p>
-            <input type="email" placeholder="Email" class="email-input">
-            <input type="password" placeholder="Password" minlength="6" maxlength="20" class="password-input">
+            <input type="email" placeholder="Email" class="email-input" required>
+            <input type="password" placeholder="Password" minlength="6" maxlength="20" class="password-input" required>
             <a class="forgot-a" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley"
                 target="_blank">Forgot password?</a>
             <input type="submit" value="Login" class="login-btn"></input>
